fix(kv-loader): fix overlay color and z-index value

--- a/packages/ui-components/src/components/loader/loader.scss
+++ b/packages/ui-components/src/components/loader/loader.scss
@@ -1,9 +1,19 @@
 @import '../../assets/styles/globals';
 
-$loader-overlay-color: var(--loader-overlay-color, kv-color('neutral-4'));
-$loader-overlay-opacity: var(--loader-overlay-opacity, 0.4);
-$loader-background-color: var(--loader-background-color, kv-color('neutral-1'));
-$loader-spinner-color: var(--loader-spinner-color, kv-color('primary'));
+:host {
+	/**
+	 * @prop --loader-overlay-color: Overlay color
+	 * @prop --loader-overlay-opacity: Overlay opacity
+	 * @prop --loader-background-color: Loader background
+	 * @prop --loader-spinner-color: Loader color
+	 * @prop --loader-z-index: Loader z-index position.
+	 */
+	--loader-overlay-color: #{kv-color('neutral-4')};
+	--loader-overlay-opacity: 0.4;
+	--loader-background-color: #{kv-color('neutral-1')};
+	--loader-spinner-color: #{kv-color('primary')};
+	--loader-z-index: 1;
+}
 
 .loader-container {
 	width: 100%;
@@ -11,21 +21,21 @@ $loader-spinner-color: var(--loader-spinner-color, kv-color('primary'));
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 999;
+	z-index: var(--loader-z-index);
 
 	.overlay {
 		width: 100%;
 		height: 100%;
-		opacity: $loader-overlay-opacity;
-		background-color: $loader-background-color;
+		opacity: var(--loader-overlay-opacity);
+		background-color: var(--loader-overlay-color);
 	}
 
 	.loader {
 		height: 0;
 		width: 0;
 		padding: 15px;
-		border: 6px solid $loader-background-color;
-		border-right-color: $loader-spinner-color;
+		border: 6px solid var(--loader-background-color);
+		border-right-color: var(--loader-spinner-color);
 		border-radius: 50%;
 		animation: loadrotate 1s infinite linear;
 		position: absolute;
